crates/compiler/src/tests/e2e/good/0226_numeric_unary_negation/main.gom
fn main() {
    let a: int8 = -1;
    println(int8_to_string(a));
    let b: int8 = -127;
    println(int8_to_string(b));
    let c: int32 = -42;
    println(int32_to_string(c));
    let d: int64 = -1000000;
    println(int64_to_string(d));
}
